[package]
name = "uwu-fier"
version = "0.1.0"
authors = ["flauntingspade4 <elliotwhybrow@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[dependencies]
wasm-bindgen = "0.2"

# To allow returning strings
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]